--- a/favourite_tastebook/profile_manager/templates/profile/base.html
+++ b/favourite_tastebook/profile_manager/templates/profile/base.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div class="layout">
-    {% block sidebar %}{% endblock %}
+
+    {% include "profile/includes/sidebar.html" %}
 
     <main class="content">
         {% block content %}{% endblock %}
